<resources>
    <string name="app_name">Movie Caffe</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>

    <string name="this_is_history_fragment">This is history fragment</string>
    <string name="this_is_profile_fragment">This is profile fragment</string>
    <string name="movie_caffe">Movie Caffe</string>
    <string name="feel_new_experience">Feel New Experience</string>
    <string name="now_playing">Now Playing</string>
    <string name="rons_gone_wrong">Rons Gone Wrong</string>
    <string name="rons_description">In a world where walking, talking, digitally connected bots have become children\'s best friends, an 11-year-old finds that his robot buddy doesn\'t quite work the same as the others do.</string>
    <string name="beverages">Beverages</string>
    <string name="mineral_water">Mineral Water</string>
    <string name="normal">Normal</string>
    <string name="cold">Cold</string>
    <string name="coffee">Coffe</string>
    <string name="arabica">Arabica</string>
    <string name="robusta">Robusta</string>
    <string name="gayo">Gayo</string>
    <string name="hot">Hot</string>
    <string name="ice">Ice</string>
    <string name="avocado">Avocado</string>
    <string name="guava">Guava</string>
    <string name="orange">Orange</string>
    <string name="_11_remaining">11 Remaining</string>
    <string name="cd_movie_image">Movie Image</string>
    <string name="food">Food</string>
    <string name="fried_rice">Fried Rice</string>
    <string name="juice">Juice</string>
    <string name="tea">Tea</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_3_items">Total (3 items)</string>
    <string name="rp_78_000">Rp 78.000</string>
    <string name="order">Order</string>
    <string name="rp_48_000">Rp.48.000</string>
    <string name="ticket_movie">Ticket Movie</string>
    <string name="reset">Reset</string>
    <string name="one">1</string>
    <string name="_11_45am">11:45am</string>
    <string name="dune">Dune</string>
    <string name="image_of_the_movie">image of the movie</string>
    <string name="remove_icon">remove icon</string>
    <string name="plus_item_quantity_icon">plus item quantity icon</string>
    <string name="minus_item_quantity_icon">minus item quantity icon</string>
    <string name="food_image">food image</string>
    <string name="waiting_to_order">Waiting to order</string>
    <string name="no_item_cart">No item in your cart you can add some</string>
    <string name="m_caffe">M - Caffe</string>
    <string name="fantastic_beast_the_crimes_of_grindelwald">Fantastic Beast: The Crimes of Grindelwald</string>
    <string name="empty_cart_image">Empty Cart Image</string>
    <string name="playing_on">Playing on</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_method">Delivery Method</string>
    <string name="at_studio">At Studio</string>
    <string name="take_away">Take Away</string>
    <string name="cash">Cash</string>
    <string name="digital_wallet">Digital Wallet</string>
    <string name="promo">Promo</string>
    <string name="payment_method">Payment Method</string>
    <string name="discount_payday">Discount Payday</string>
    <string name="_1_voucher_you_safe_rp_40_000">1 voucher, You safe Rp.40.000!</string>
    <string name="subtotal_order_3_items">Subtotal Order (3 items)</string>
    <string name="discount">Discount</string>
    <string name="total_payment">Total Payment</string>
    <string name="rp_40_000">Rp.40.000</string>
    <string name="rp_38_000">Rp.38.000</string>
    <string name="discount_image">Discount Image</string>
    <string name="navigate_button_to_discount_page">Navigate button to discount page button</string>
    <string name="use_promo">Use Promo</string>
    <string name="you_can_save">You can save</string>
    <string name="apply">Apply</string>
    <string name="last_for_3_days">Last for 3 days</string>
    <string name="discount_for_rp_9000">Discount for Rp.9000</string>
    <string name="you_can_save_with_promo">You can save with promo</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="input_promo_code">Input promo code</string>
    <string name="no_input">-</string>
    <string name="processed">Processed</string>
    <string name="success">Success</string>
    <string name="next">Next</string>

    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="order_food">Ordered Food</string>
    <string name="qty_food">5</string>
    <string name="order_ticket">Ordered Ticket</string>
    <string name="qty_ticket">10</string>
    <string name="visited">Visited</string>
    <string name="lst_visit">12</string>
    <string name="exit">Exit</string>
    

    <string name="background">Background</string>
    <string name="cinema">Cinema Food</string>
    <string name="foodtext1">Order Your Food, Enjoy!</string>
    <string name="desc1">Take Your Food Enjoy Your Movie</string>
    <string name="foodtext2">Grab Your Ticket</string>
    <string name="desc2">Watching Your Favorite Movie</string>
    <string name="foodtext3">Custom Your Profile Now</string>
    <string name="desc3">No registration, Connect With Wifi Cafe To Connect Local Database</string>

    <string-array name="planets_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_icon_for_processed_order">dialog icon for processed order</string>
    <string name="order_processed">ORDER PROCESSED</string>
    <string name="pesanan_akan_siap_dalam">Pesanan akan siap dalam</string>
    <string name="_15_menit">15 menit</string>
    <string name="receipt_history">Receipt History</string>
    <string name="back_to_home">Back To Home</string>
    <string name="_7fs989r2fdsf9">7FS989R2FDSF9</string>
    <string name="id_transaction">ID Transaction</string>
    <string name="guest">Guest</string>
    <string name="logout">Logout</string>
    <string name="_5">5</string>
    <string name="caffe_image">Caffe Image</string>
    <string name="total_ordered">Total Ordered</string>
    <string name="total_coupon">Total Coupon</string>
    <string name="no_value">-</string>
</resources>