...
                        app:layout_constraintStart_toStartOf="@+id/title_delivery_method"
                        app:layout_constraintTop_toBottomOf="@+id/title_delivery_method"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <Button
                            android:id="@+id/button1"
                            style="@style/togglebutton_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/at_studio" />

...
                        app:layout_constraintStart_toStartOf="@+id/title_payment_method"
                        app:layout_constraintTop_toBottomOf="@+id/title_payment_method"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <Button
                            android:id="@+id/button3"
                            style="@style/togglebutton_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cash" />

...
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_total_payment2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_order"
                android:layout_width="110dp"
                android:layout_height="43dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_green_corner_radius"
                android:fontFamily="sans-serif"
                android:text="@string/order"
...
